llvm/test/tools/llubi/noalias_foreign_access.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --experimental-noalias --verbose < %s 2>&1 | FileCheck %s

define void @violates(ptr noalias %x, ptr %y) {
  store i32 1, ptr %x
  %v = load i32, ptr %y
  ret void
}

define void @main() {
  %a = alloca i32
  store i32 0, ptr %a
  call void @violates(ptr %a, ptr %a)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT:   %a = alloca i32, align 4 => ptr 0x8 [a]
; CHECK-NEXT:   store i32 0, ptr %a, align 4
; CHECK-NEXT: Entering function: violates
; CHECK-NEXT:   ptr %x = ptr 0x8 [a]
; CHECK-NEXT:   ptr %y = ptr 0x8 [a]
; CHECK-NEXT: NoAlias: created protector node #1 for 'a' based on raw/root
; CHECK-NEXT: NoAlias: node #1 local write through node #1 on 'a' bytes [0, 4): Reserved -> Unique
; CHECK-NEXT: NoAlias: write through node #1 on 'a' bytes [0, 4) checked 1 active noalias protector
; CHECK-NEXT:   store i32 1, ptr %x, align 4
; CHECK-NEXT: NoAlias: noalias violation: read through raw/root on 'a' bytes [0, 4) is foreign to protected node #1, but that protector is in Unique state
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   %v = load i32, ptr %y, align 4 at @violates
; CHECK-NEXT: #1   call void @violates(ptr %a, ptr %a) at @main
; CHECK-NEXT: Immediate UB detected: noalias violation: read through raw/root on 'a' bytes [0, 4) is foreign to protected node #1, but that protector is in Unique state
; CHECK-NEXT: error: Execution of function 'main' failed.
